--- a/.github/workflows/test_mrs.yml
+++ b/.github/workflows/test_mrs.yml
@@ -38,7 +38,7 @@ jobs:
       - name: install python packages
         run: |
           pip install --upgrade pip
-          pip install pytest suspect pytest-cov colorlog
+          pip install pytest suspect pytest-cov colorlog pymsteams
           pip install git+https://${{ secrets.dicomserver_uname }}:${{ secrets.dicomserver_pw }}@bitbucket.org/gsttmri/dicomserver.git@0.12.4.1
 
       - name: Install Tarquin
