--- a/.github/workflows/test_mrs.yml
+++ b/.github/workflows/test_mrs.yml
@@ -52,6 +52,12 @@ jobs:
           mkdir ../tarquin_folder && wget -O tarquin.tar.gz https://sourceforge.net/projects/tarquin/files/TARQUIN_4.3.11/TARQUIN_Linux_4.3.11.tar.gz/download && tar -xzf tarquin.tar.gz -C ../tarquin_folder && rm tarquin.tar.gz
           mv ../tarquin_folder/TARQUIN_Linux_4.3.11_RC/tarquin /usr/local/bin/tarquin && ln -s /usr/bin/gnuplot /usr/local/bin/gnuplot
 
+      - name: print info
+        run: |
+          python3 -c "import sys; print('python3 sys.prefix: ' + sys.prefix)"
+          python3 -c "import sys; print('python3 sys.base_prefix: ' + sys.base_prefix)"
+          python -c "import sys; print('python sys.prefix' + sys.prefix)"
+
       - name: Run MRS tests
         run: |
           python3.6 -m pytest --continue-on-collection-errors tests/
