--- a/.github/workflows/test_mrs.yml
+++ b/.github/workflows/test_mrs.yml
@@ -41,15 +41,19 @@ jobs:
         run: |
           source ./env/bin/activate
           sudo apt-get update
-          sudo apt-get install default-libmysqlclient-dev poppler-utils wget dcmtk gnuplot libcairo2-dev libtiff5-dev libjpeg62 zlib1g-dev libfreetype6-dev liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk ghostscript -y
+          sudo apt-get install tree default-libmysqlclient-dev poppler-utils wget dcmtk gnuplot libcairo2-dev libtiff5-dev libjpeg62 zlib1g-dev libfreetype6-dev liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk ghostscript -y
 
       - name: install python packages
         run: |
           source ./env/bin/activate
           python3.6 -m pip install wheel pytest suspect pytest-cov colorlog pymsteams appdirs pynetdicom
           python3.6 -m pip install git+https://${{ secrets.dicomserver_uname }}:${{ secrets.dicomserver_pw }}@bitbucket.org/gsttmri/dicomserver.git@0.12.4.1
-          which dicomserver
+          tree 
 
+      - name: install dicomserver with clone
+        run: |
+          git clone git+https://${{ secrets.dicomserver_uname }}:${{ secrets.dicomserver_pw }}@bitbucket.org/gsttmri/dicomserver.git@0.12.4.1
+          tree -L 2 dicomserver
 
       - name: Install Tarquin
         run: |
