--- a/.github/workflows/test_mrs.yml
+++ b/.github/workflows/test_mrs.yml
@@ -49,7 +49,8 @@ jobs:
           python3.6 -m pip install -r requirements.txt
           python3.6 -m pip install git+https://${{ secrets.dicomserver_uname }}:${{ secrets.dicomserver_pw }}@bitbucket.org/gsttmri/dicomserver.git@0.12.4.1
 
-      - name: GA fixes # https://github.com/actions/virtual-environments/issues/4799
+# https://github.com/actions/virtual-environments/issues/4799
+      - name: GA fixes
           sudo apt-get update
           sudo apt-get remove mysql* && sudo apt-get install -y mysql-server libmysqlclient-dev
 
