--- a/.github/ISSUE_TEMPLATE/CAPA.yml
+++ b/.github/ISSUE_TEMPLATE/CAPA.yml
@@ -15,7 +15,7 @@ body:
     id: Type
     attributes:
       label: Type
-      description: is this a corrective action or a preventative action?
+      description: Is this a corrective action or a preventative action?
       options:
         - Corrective action
         - Preventative action
@@ -24,7 +24,7 @@ body:
     id: datix
     attributes:
       label: Datix ID
-      description: If this CAPA has an associated datix report, please enter the datix ID here.
+      description: If this CAPA has an associated Datix report, please enter the Datix ID here.
     validations:
       required: false
 
@@ -40,7 +40,7 @@ body:
   - type: textarea
     id: root_cause
     attributes:
-      label: Root cause
+      label: Root Cause
       description: Please describe the root cause
       placeholder: e.g., Loss of information during development
     validations:
