--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 pytest==7.0.1
 suspect==0.4.4
 aide-sdk==1.0.3
-pydicom==2.2.2
+pydicom==2.1.2
 pillow==9.0.1
 pandas==1.4.1
 numpy==1.22.2
 plotly==5.6.0
 matplotlib==3.5.1
+PyPDF2==1.26.0
