--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aide-sdk==1.0.4
 pydicom==2.2.2
 pillow==9.0.1
 pandas==1.4.1
-# numpy==1.22.3
+numpy==1.22.3
 plotly==5.6.0
 matplotlib==3.5.1
 PyPDF2==1.26.0
