--- a/config/manifest.json
+++ b/config/manifest.json
@@ -1,6 +1,6 @@
 {
   "model_description": "Magnetic Resonance Spectroscopy using Tarquin",
-  "predicate": "DICOM_Manufacturer == 'Philips Medical Systems' OR DICOM_Manufacturer == 'Siemens'",
+  "predicate": "DICOM_Modality == 'MR' AND DICOM_Manufacturer == 'Philips Medical Systems' OR DICOM_Manufacturer == 'Siemens' OR DICOM_Manufacturer == 'SIEMENS' OR DICOM_Manufacturer == 'siemens'",
   "mode": "QA",
   "model_name": "mrs-tarquin",
   "model_version": "0.1.0"
