--- a/.github/workflows/test_development_mrs.yml
+++ b/.github/workflows/test_development_mrs.yml
@@ -12,24 +12,48 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
-      - name: build docker iamge
-        run: docker build -t mrs-tarquin:latest .
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: mrs-tarquin:latest
+          outputs: type=docker,dest=/tmp/mrs-tarquin.tar
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: mrs-tarquin
+          path: /tmp/mrs-tarquin.tar
 
   test:
     needs: build
     runs-on: ubuntu-latest
-    container:
-      image: mrs-tarquin:latest
 
     steps:
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: mrs-tarquin
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/mrs-tarquin.tar
+
       - name: run tests
         run:  docker run --mount type=bind,source=$(pwd)/tests,target=/tests mrs-tarquin pytest --continue-on-collection-errors tests/
 
