--- a/.github/workflows/test_production_mrs.yml
+++ b/.github/workflows/test_production_mrs.yml
@@ -8,84 +8,41 @@ on:
       - "main"
       - "release/*"
 
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+
+  build-and-test:
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Build and tag image
+        run: docker build -t mrs-tarquin:latest .
+
+      - name: run tests
+        run: docker run --mount type=bind,source=$(pwd),target=/mrs mrs-tarquin pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=mrs --continue-on-collection-errors tests/ | tee pytest-coverage.txt ; echo $?
+
+      - name: Pytest coverage comment
+        id: coverageComment
+        uses: MishaKav/pytest-coverage-comment@main
         with:
-          python-version: 3.6
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: ./pytest.xml
 
-      - name: setup virtual environment
-        run: |
-          python3.6 -m venv env
-          source ./env/bin/activate
-          echo "VIRTUAL ENV:" $VIRTUAL_ENV
-          python3.6 -m pip install --upgrade pip
-
-      - name: Install system requirements
-        run: |
-          source ./env/bin/activate
-          sudo apt-get update
-          sudo apt-get install default-libmysqlclient-dev poppler-utils wget dcmtk gnuplot libcairo2-dev libtiff5-dev libjpeg62 zlib1g-dev libfreetype6-dev liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk ghostscript -y
-          gs --version
-          sudo sed -i '/disable ghostscript format types/,+6d' /etc/ImageMagick-6/policy.xml
-#           https://stackoverflow.com/questions/52998331/imagemagick-security-policy-pdf-blocking-conversion
-
-      - name: install python packages
-        run: |
-          source ./env/bin/activate
-          python3.6 -m pip install -r requirements.txt
-          python3.6 -m pip install git+https://${{ secrets.dicomserver_uname }}:${{ secrets.dicomserver_pw }}@bitbucket.org/gsttmri/dicomserver.git@0.12.4.1
-
-      - name: GA fixes # https://github.com/actions/virtual-environments/issues/4799
-        run: |
-          sudo apt-get update
-          sudo apt-get remove mysql* && sudo apt-get install -y mysql-server libmysqlclient-dev
-
-      - name: Install Tarquin
-        run: |
-          source ./env/bin/activate
-          mkdir ../tarquin_folder && wget -O tarquin.tar.gz https://sourceforge.net/projects/tarquin/files/TARQUIN_4.3.11/TARQUIN_Linux_4.3.11.tar.gz/download && tar -xzf tarquin.tar.gz -C ../tarquin_folder && rm tarquin.tar.gz
-          mv ../tarquin_folder/TARQUIN_Linux_4.3.11_RC/tarquin /usr/local/bin/tarquin && ln -s /usr/bin/gnuplot /usr/local/bin/gnuplot
-
-      - name: print env info
-        run: |
-          python3 -c "import sys; print('python3 sys.prefix: ' + sys.prefix)"
-          python3 -c "import sys; print('python3 sys.base_prefix: ' + sys.base_prefix)"
-          source ./env/bin/activate
-          python3 -c "import sys; print('post activate python3 sys.prefix' + sys.prefix)"
-          python3 -c "import sys; print('post activate python3 sys.base_prefix: ' + sys.base_prefix)"
-
-      - name: Run MRS tests
-        run: |
-          source ./env/bin/activate
-          pwd
-          python3.6 -m pytest --continue-on-collection-errors tests/
-
-#      - name: Update coverage Badge
-#        if: github.ref == 'refs/heads/main'  # only on main
-#        uses: schneegans/dynamic-badges-action@v1.0.0
-#        with:
-#          auth: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
-#          gistID: ba102d5f3e592fcd50451c2eff8a803d
-#          filename: mlops_pytest-coverage-comment.json
-#          label: Test coverage
-#          message: ${{ steps.coverageComment.outputs.coverage }}
-#          color: ${{ steps.coverageComment.outputs.color }}
-#          namedLogo: python
-#          logo: https://img.shields.io/badge/coverage-{{ steps.coverageComment.outputs.coverage }}-{{ steps.coverageComment.outputs.color }}.svg
-
+      - name: Update coverage Badge
+        if: github.ref == 'refs/heads/main'  # only on main
+        uses: schneegans/dynamic-badges-action@v1.0.0
+        with:
+          auth: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
+          gistID: e1aa11345e5c62d9ea100a83a0f4bfc9
+          filename: MRS_cov_badge.json
+          label: Test coverage
+          message: ${{ steps.coverageComment.outputs.coverage }}
+          color: ${{ steps.coverageComment.outputs.color }}
+          namedLogo: python
+          logo: https://img.shields.io/badge/coverage-{{ steps.coverageComment.outputs.coverage }}-{{ steps.coverageComment.outputs.color }}.svg
